<resources>
    <string name="app_name">NuageMobileAlarms</string>
    <string name="server_name_ip">Server Name/IP:</string>
    <string name="server_port">Server Port:</string>
    <string name="name_ip_input">Ex: NokiaServer123/127.0.0.1</string>
    <string name="port_input">Ex: 8443</string>
    <string name="remember_server">Remember server</string>
    <string name="button_enter">Enter</string>

    <string name="companyname">Company Name:</string>
    <string name="username">Username:</string>
    <string name="companyname_hint">Ex: csp</string>
    <string name="username_hint">Ex: username123</string>
    <string name="password">Password:</string>
    <string name="remember_me">Remember me</string>

    <string name="button_alarmlist">Search all alarms.</string>
    <string name="button_alarmnotifications">Set alarm notification settings.</string>
    <string name="button_nuagedescription">Nuage description.</string>

    <string name="nuage_enterprises">Enterprises</string>
    <string name="nuage_domains">Domains</string>
    <string name="nuage_zones">Zones</string>
    <string name="nuage_vports">VPorts</string>

    <string name="filters">Filters</string>
    <string name="labels">Labels</string>
    <string name="help">Help</string>
    <string name="severity">Severity:</string>
    <string-array name="severity_items">
        <item>CRITICAL</item>
        <item>MAJOR</item>
        <item>MINOR</item>
        <item>WARNING</item>
        <item>INFO</item>
        <item>ALL</item>
    </string-array>

    <string name="existing_alarms">Existing Alarms:</string>
    <string name="alarm_origin">Origin:</string>
    <string name="alarm_reason">Reason:</string>
    <string name="button_search">Search</string>
    <string name="existing_entities">All existing entities:</string>
    <string name="button_send">Send</string>
    <string name="button_add">Add</string>

    <string name="nav_alarms">Alarms</string>
    <string name="nav_alarm_notifications">Alarm Notifications</string>
    <string name="nav_account">Account</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_description">Description</string>

    <string name="header_settings">Settings:</string>
    <string name="settings_account">Account:</string>
    <string name="settings_server">Server:</string>
    <string name="button_save">Save</string>
    <string name="button_refresh">Refresh</string>
    <string name="activate_notifications">Activate Notifications</string>
    <string name="notification_alarms">Notification Alarms:</string>

    <string name="header_description">Description:</string>
    <string name="app_description_title">App Description:</string>
    <string name="app_description">
        This Application was developed by Marco Martins in collaboration with ISEL and Nokia. This app\'s function is
        supposed to alert and allow visualization of current existing alarms all over Nuage\'s Network.
    </string>
    <string name="company_description_title">Company Description:</string>
    <string name="company_description">
        Nuage Networks from Nokia brings a combination of groundbreaking technologies and networking expertise to the
        enterprise and telecommunications industries. We have applied new thinking to delivering massively scalable and
        highly programmable SDN solutions from the data center to the WAN with the security and availability required by
        business-critical environments.
    </string>
    <string name="notification_problem1_title">Not receiving notifications when app is closed?</string>
    <string name="notification_problem1_text">Try going to your phone\'s Security -> Permissions -> Autostart and toggle
        NuageMobileAlarms
    </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>
