<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/colorMenuItemActivityBackground">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="52dp"
            tools:layout_editor_absoluteX="0dp">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:id="@+id/passWordInput2"
                    android:text="JMh1aGt39uGwktc8"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passWord" app:layout_constraintHorizontal_bias="0.0"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/userNameInput2"
                    android:hint="@string/username_hint"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/userName" app:layout_constraintHorizontal_bias="0.0"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/companyNameInput2"
                    android:hint="@string/companyname_hint"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/companyName" app:layout_constraintHorizontal_bias="0.0"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/serverPortInput2" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textAllCaps="false" android:textStyle="italic" android:hint="@string/port_input"
                    app:layout_constraintTop_toBottomOf="@+id/serverPort"
                    app:layout_constraintHorizontal_bias="0.0"/>
            <TextView
                    android:text="@string/header_settings"
                    android:textColor="@color/colorMenuText"
                    android:background="@color/colorHeaderBackground"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/headerTextView"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:textSize="40sp"/>
            <TextView
                    android:text="@string/server_name_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:id="@+id/serverNameIp" android:textSize="24sp"
                    android:textColor="@color/colorMenuText"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    tools:layout_editor_absoluteY="86dp"/>
            <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/serverNameIpInput2" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:hint="@string/name_ip_input"
                    android:textStyle="italic"
                    app:layout_constraintTop_toBottomOf="@+id/serverNameIp"
                    app:layout_constraintHorizontal_bias="0.0"/>
            <TextView
                    android:text="@string/server_port"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:id="@+id/serverPort" android:textSize="24sp"
                    android:textColor="@color/colorMenuText"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    tools:layout_editor_absoluteY="188dp" app:layout_constraintHorizontal_bias="0.0"/>
            <TextView
                    android:text="@string/companyname"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:id="@+id/companyName" android:textSize="24sp"
                    android:textColor="@color/colorMenuText"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    tools:layout_editor_absoluteY="335dp" app:layout_constraintHorizontal_bias="0.0"/>
            <TextView
                    android:text="@string/password"
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:id="@+id/passWord" android:textSize="24sp"
                    android:textColor="@color/colorMenuText"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    tools:layout_editor_absoluteY="533dp" app:layout_constraintHorizontal_bias="0.0"/>
            <TextView
                    android:text="@string/username"
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:id="@+id/userName" android:textSize="24sp"
                    android:textColor="@color/colorMenuText"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    tools:layout_editor_absoluteY="433dp" app:layout_constraintHorizontal_bias="0.0"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>