<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:id="@+id/mainTitle" android:textSize="30sp"
            android:textColor="@color/colorText" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/serverNameIp"
            android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/server_name_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/serverNameIp" android:textSize="24sp"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toTopOf="@+id/serverNameIpInput" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"/>
    <EditText
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/serverNameIpInput" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/serverPort" android:hint="@string/name_ip_input"
            android:textStyle="italic" android:text="NokiaServer/124.252.253.203" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.992"/>
    <TextView
            android:text="@string/server_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/serverPort" android:textSize="24sp"
            android:textColor="@color/colorText" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/serverPortInput"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/serverPortInput" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAllCaps="false" android:textStyle="italic" android:hint="@string/port_input"
            app:layout_constraintBottom_toTopOf="@+id/enterButton"
            android:text="8443" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.928"/>
    <Button
            android:text="@string/button_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/enterButton" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.737"/>
</android.support.constraint.ConstraintLayout>