<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mainTitle" android:textSize="30sp"
            android:textColor="@color/colorText" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/subTitle"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/subTitle" android:textSize="18sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.498"
            android:textColor="@color/colorText"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="302dp"
            android:layout_height="168dp"
            android:id="@+id/linearLayout" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp">
        <Button
                android:text="@string/button_alarmlist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button_alarmlist"/>
        <Button
                android:text="@string/button_alarmnotifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button_alarmnotifications"/>
        <Button
                android:text="@string/button_nuagedescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button_nuagedescription"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>